--- a/sass/layout/_portfolio-galery.scss
+++ b/sass/layout/_portfolio-galery.scss
@@ -1,10 +1,10 @@
-.page-header {
+.page-header__portfolio {
     border-bottom: 1px solid #ececec;
 }
 
-.page-header .container {
+/*.page-header .container {
     display: flex;
-}
+}*/
 
 .galery-list {
     display: flex;
