--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,7 @@ img {
 }
 
 .header_container {
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
@@ -380,10 +381,11 @@ img {
     width: 100%;
     height: 100vh;
     overflow: auto;
-    background-color: aqua;
+    background-color: #ffffff;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    z-index: 1000;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .mobile-menu.is-open {
@@ -399,13 +401,17 @@ img {
     border: none;
     padding: 0;
     line-height: 0;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+    fill: var(--accent-color);
   }
   .mobile-menu__container {
     position: relative;
     padding-top: 48px;
     padding-bottom: 48px;
   }
-  .menu-mobile-btn {
+  .mobile-menu-btn {
     background-color: transparent;
     border: none;
     padding: 0;
@@ -413,18 +419,125 @@ img {
     cursor: pointer;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .mobile-menu-btn__icon:hover,
-  .mobile-menu-btn__icon:focus {
+  .mobile-menu-btn:hover, .mobile-menu-btn:focus {
     fill: var(--accent-color);
+  }
+  .mobile-menu__item {
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__item:last-child {
+    margin-bottom: 302px;
+  }
+  .mobile-menu__item > .link {
+    color: var(--title-text-color);
+  }
+  .link.current {
+    color: var(--accent-color);
+  }
+  .mobile-menu__contacts-list {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__contacts-list:last-child {
+    margin-bottom: 64px;
+  }
+  .mobile-menu__contacts-phone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+  .mobile-menu__contacts-mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  .mobile-menu__social-list {
+    display: flex;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__social-item {
+    margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-menu__social-item:last-child {
+    margin-right: 0px;
+    border-right: none;
+  }
+  .mobile-menu__social-link {
+    color: var(--accent-color);
   }
 }
 
 @media screen and (min-width: 768px) {
-  .menu-mobile-btn {
+  .mobile-menu-btn {
     display: none;
   }
   .mobile-menu {
     display: none;
+  }
+  .site-nav {
+    display: flex;
+  }
+  .site-nav__item {
+    margin-right: 50px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
+  .site-nav__item:last-child {
+    margin-right: 0px;
+  }
+  .site-nav__item > .link {
+    color: var(--title-text-color);
+  }
+  .link.current {
+    color: var(--accent-color);
+  }
+  .site-nav__item .effect {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .effect {
+    position: relative;
+  }
+  .effect::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    border-radius: 2px;
+    right: 0;
+    background: var(--accent-color);
+  }
+  .icon_contacts_mail, .icon_contacts_smartphone {
+    margin-right: 8px;
+    fill: var(--primary-text-color);
+  }
+  .contacts-list {
+    margin-bottom: 10px;
+  }
+  .contacts {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
   }
 }
 
@@ -872,14 +985,13 @@ img {
   margin-left: 10px;
 }
 
-.page-header {
+.page-header__portfolio {
   border-bottom: 1px solid #ececec;
 }
 
-.page-header .container {
-  display: flex;
-}
-
+/*.page-header .container {
+    display: flex;
+}*/
 .galery-list {
   display: flex;
   justify-content: center;
