--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 
-
 .header_container{
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -26,6 +26,8 @@
     .contacts-header {
         display: none;
     }
+
+
     .mobile-menu {
         position: absolute;
         top: 0;
@@ -33,12 +35,13 @@
         width: 100%;
         height: 100vh;
         overflow: auto;
-        background-color: aqua;
+        background-color:#ffffff;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
+        z-index:1000 ;
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+      
     }
     
     .mobile-menu.is-open {
@@ -56,38 +59,166 @@
         border: none;
         padding: 0;
         line-height: 0;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus{
+            fill: var(--accent-color);
+        }
     }
     
     .mobile-menu__container {
         position: relative;
         padding-top: 48px;
         padding-bottom: 48px;
+    
     }
-    .menu-mobile-btn {
+    .mobile-menu-btn {
         background-color: transparent;
         border: none;
         padding: 0;
         line-height: 0;
         cursor: pointer;
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    }
-    
-    .mobile-menu-btn__icon:hover,
-    .mobile-menu-btn__icon:focus {
+        
+    &:hover,
+    &:focus {
         fill: var(--accent-color);
     }
 
+    }
+    
+    .mobile-menu__item{
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 40px;
+    line-height:1.18;
+    letter-spacing: 0.02em;
+
+    &:last-child{
+        margin-bottom: 302px;
+    }
 }
+    .mobile-menu__item>.link {
+    color: var(--title-text-color);
+}
+
+.link.current {
+    color: var(--accent-color);
+}
+.mobile-menu__contacts-list{
+margin-bottom: 32px;
+&:last-child{
+    margin-bottom: 64px;
+}
+}
+.mobile-menu__contacts-phone{
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18px;
+    letter-spacing: 0.02em;
+    color:var(--accent-color);
+}
+.mobile-menu__contacts-mail{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
+.mobile-menu__social-list{
+    display: flex;
+  
+    font-weight: 500;
+    font-size: 18px;
+    line-height:1.22;
+    letter-spacing: 0.02em;
+    }
+.mobile-menu__social-item{
+    margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+
+    &:last-child {
+        margin-right: 0px;
+       border-right: none;
+}
+}
+.mobile-menu__social-link {
+    color: var(--accent-color);
+}
+}
+
+
 //768px+
 @media screen and (min-width:768px){
     
-    .menu-mobile-btn{
+    .mobile-menu-btn{
         display: none;
     }
     .mobile-menu{
         display: none;
     }
+.site-nav {
+    display: flex;
+}
+.site-nav__item {
+    margin-right: 50px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+
+    &:last-child {
+        margin-right: 0px;
+    }
+}
+.site-nav__item>.link {
+    color: var(--title-text-color);
+}
+.link.current {
+    color: var(--accent-color);
+}
+.site-nav__item .effect {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.effect {
+    position: relative;
+
+    &::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        bottom: 0;
+        border-radius: 2px;
+        right: 0;
+        background: var(--accent-color);
+    }
+}
+.icon_contacts_mail, .icon_contacts_smartphone{
+    margin-right: 8px;
+    fill: var(--primary-text-color);
+    
+}
+.contacts-list{
+    margin-bottom: 10px;
+}
+.contacts {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color); 
+}
+}
+
+//1200+
+@media screen and (min-width:1200px){
     
 }
 
