--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -75,7 +75,7 @@
 @media screen and (min-width: 1200px) {
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/hero.jpg');
+            url('../../images/hero.jpg');
         max-width: 1200px;
         background-size: cover;
     }
