--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,21 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+/*.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}*/
 /*.container {
     width: 1200px;
     padding-left: 15px;
@@ -735,7 +746,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
     max-width: 1200px;
     background-size: cover;
   }
@@ -788,19 +799,14 @@ img {
     }
 }
 */
-.text,
-.member-list__description {
-  background-color: var(--main-background-color);
-}
-
 .main-text__images {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f5f4fa;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
-  background-color: #f5f4fa;
 }
 
 .main-text__images-items {
@@ -808,18 +814,8 @@ img {
   height: 70px;
 }
 
-.main-text {
-  display: flex;
-  margin-left: -30px;
-}
-
-.main-text__items {
-  flex-basis: calc((100%-120px) / 4);
-  margin-left: 30px;
-}
-
 .main-text__themes {
-  font-weight: 700;
+  font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -834,6 +830,83 @@ img {
   letter-spacing: 0.03em;
 }
 
+@media screen and (max-width: 768px) {
+  .main-text__images {
+    width: 450px;
+  }
+  .main-text__items {
+    margin-bottom: 30px;
+  }
+  .main-text__items:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-text__images {
+    width: 354px;
+  }
+  .main-text {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .main-text__items {
+    flex-basis: calc((100% - 40px) / 2);
+  }
+  .main-text__items:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .main-text__items:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+}
+
+/*.text,
+.member-list__description {
+    background-color: var(--main-background-color);
+}
+
+.main-text__images {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
+
+    background-color: #f5f4fa;
+}
+
+.main-text__images-items {
+    width: 70px;
+    height: 70px;
+}
+
+.main-text {
+    display: flex;
+    margin-left: -30px;
+}
+
+.main-text__items {
+    flex-basis: calc((100%-120px) / 4);
+    margin-left: 30px;
+}
+
+.main-text__themes {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--title-text-color);
+}
+
+.main-text__features {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}*/
 .description {
   padding-top: 0px;
 }
