--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -46,7 +46,21 @@ img {
 .list {
     list-style: none;
 }
+
 .section {
+    padding-top: 60px;
+    padding-bottom: 60px;}
+
+
+//1200+
+@media screen and (min-width:1200px){
+    .section {
+        padding-top: 94px;
+        padding-bottom: 94px;
+
+}
+}
+/*.section {
     padding-top: 94px;
     padding-bottom: 94px;
-}
+}*/
