--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width:768px){
     .hero{
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('/images/imagesMobile/Header.jpg');
+        url('../images/imagesMobile/Header.jpg');
         max-width:480px;
     }
 
@@ -48,7 +48,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
         .hero {
-            background-image:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('/images/imagesMobile/Header@2x.jpg');
+            background-image:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/imagesMobile/Header@2x.jpg');
         }
     }
 
@@ -58,7 +58,7 @@
 @media screen and (min-width: 768px){
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('/images/imagesTablet/Header-tablet.jpg');
+            url('../images/imagesTablet/Header-tablet.jpg');
         max-width: 768px;
     }
     
@@ -66,7 +66,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
         .hero {
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('/images/imagesTablet/Header-tablet@2x.jpg');
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/imagesTablet/Header-tablet@2x.jpg');
         }
     }
 
@@ -84,7 +84,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
         .hero {
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('/images/hero@2x.jpg');
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero@2x.jpg');
         }
     }
 
