--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -1,4 +1,4 @@
-.members-team {
+/*.members-team {
     margin-bottom: 50px;
 }
 
@@ -8,7 +8,7 @@
 
 .member-list {
     display: flex;
-    /* margin-left: -30px;*/
+    
 }
 
 .member-list__description {
@@ -49,4 +49,4 @@
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
-}
+}*/
