hw8 clients list

--- a/sass/layout/_description-pictures.scss
+++ b/sass/layout/_description-pictures.scss
@@ -9,9 +9,12 @@
     .description {
         display: none;
 
-}
+}}
 //1200+
 @media screen and (min-width:1200px){
+    .description{
+        display: block;
+    }
 .description {
     padding-top: 0px;
 }
