--- a/css/main.css
+++ b/css/main.css
@@ -747,7 +747,7 @@ img {
 @media screen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
-    max-width: 1200px;
+    max-width: 1600px;
     background-size: cover;
   }
 }
@@ -851,7 +851,7 @@ img {
     flex-wrap: wrap;
   }
   .main-text__items {
-    flex-basis: calc((100% - 40px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
   }
   .main-text__items:not(:nth-child(2n)) {
     margin-right: 30px;
@@ -868,11 +868,15 @@ img {
   .main-text {
     display: flex;
     flex-wrap: nowrap;
-    margin-right: -30px;
+    justify-content: space-between;
   }
   .main-text__items {
     flex-basis: calc((100%-120px) / 4);
     margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .main-text__items:last-child {
+    margin-right: 0px;
   }
 }
 
@@ -928,7 +932,16 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .description {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 1200px) {
+  .description {
+    display: block;
+  }
   .description {
     padding-top: 0px;
   }
@@ -961,35 +974,13 @@ img {
   }
 }
 
-.members-team {
-  margin-bottom: 50px;
-}
-
 .members {
   background-color: #f5f4fa;
 }
 
-.member-list {
-  display: flex;
-  /* margin-left: -30px;*/
-}
-
 .member-list__description {
-  flex-basis: calc((100% - 90px) / 4);
-  margin-left: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.member-list__description:first-child {
-  margin-left: 0;
-}
-
-.members-wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 32px;
-  padding-right: 32px;
 }
 
 .members-name {
@@ -1010,12 +1001,80 @@ img {
   margin-bottom: 16px;
 }
 
+.member-list__description {
+  background-color: #ffffff;
+}
+
+.members-team {
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .members-wrapper {
+    padding-top: 30px;
+    padding-bottom: 24px;
+    padding-left: 122px;
+    padding-right: 122px;
+  }
+  .member-list__description {
+    margin-bottom: 30px;
+  }
+  .member-list__description:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .member-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .member-list__description {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  .member-list__description:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .member-list__description:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+  .members-wrapper {
+    padding-top: 30px;
+    padding-bottom: 24px;
+    padding-left: 74px;
+    padding-right: 74px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .members-team {
+    margin-bottom: 50px;
+  }
+  .member-list {
+    flex-wrap: nowrap;
+  }
+  .member-list__description {
+    flex-basis: calc((100%-120px) / 4);
+    margin-right: 30px;
+  }
+  .member-list__description:last-child {
+    margin-right: 0px;
+  }
+  .members-wrapper {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .member-list__description {
+    margin-bottom: 30px;
+  }
+}
+
 .clients-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
-  height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
@@ -1040,6 +1099,90 @@ img {
   fill: currentColor;
 }
 
+.description__title {
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .clients-link {
+    width: 210px;
+    height: 92px;
+  }
+  .clients-list {
+    flex-wrap: wrap;
+  }
+  .clients-item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  .clients-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-link {
+    width: 226px;
+    height: 92px;
+  }
+  .clients-list {
+    flex-wrap: wrap;
+  }
+  .clients-item {
+    flex-basis: calc((100% - 90px) / 3);
+  }
+  .clients-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    flex-wrap: nowrap;
+  }
+  .clients-link {
+    width: 170px;
+    height: 92px;
+  }
+  .clients-item {
+    flex-basis: content;
+  }
+  .clients-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 0px;
+  }
+}
+
+/*.clients-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+
+    border-radius: 4px;
+}
+
+.clients-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.clients-link {
+    color: #afb1b8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            border-color: var(--accent-color);
+            color: var(--accent-color);
+        }
+}
+
+.clients-logo {
+    fill: currentColor;
+}*/
 .adress {
   padding-top: 60px;
   padding-bottom: 60px;
