--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,6 +2,96 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+}
+.clients-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.clients-link {
+    color: #afb1b8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        border-color: var(--accent-color);
+        color: var(--accent-color);
+    }
+}
+
+.clients-logo {
+    fill: currentColor;
+}
+.description__title{
+    margin-bottom: 30px;
+}
+
+//480+
+@media screen and (max-width:768px){
+    .clients-link {
+        width: 210px;
+        height: 92px;}
+       
+.clients-list {
+    flex-wrap: wrap;
+}
+
+.clients-item{
+        flex-basis: calc((100% - 30px) / 2);
+        
+        &:not(:nth-last-child(-n + 2)) {
+            margin-bottom: 30px;
+        }
+    }
+
+}
+//768+
+@media screen and (min-width: 768px){
+    .clients-link {
+        width: 226px;
+        height: 92px;
+    }
+    
+    .clients-list {
+        flex-wrap: wrap;
+    }
+    
+    .clients-item {
+        flex-basis: calc((100% - 90px) / 3);
+    
+        &:not(:nth-last-child(-n + 3)) {
+            margin-bottom: 30px;
+        }
+    }
+    
+    }
+
+    //1200+
+    @media screen and (min-width:1200px){
+        .clients-list {
+            flex-wrap: nowrap;
+        }
+        .clients-link {
+            width: 170px;
+            height: 92px;
+        }
+
+        .clients-item {
+        flex-basis:content;
+            &:not(:nth-last-child(-n + 3)) {
+                margin-bottom: 0px;
+            }
+        }
+    }
+
+/*.clients-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 170px;
     height: 92px;
     border: 1px solid #afb1b8;
@@ -29,4 +119,4 @@
 
 .clients-logo {
     fill: currentColor;
-}
+}*/
