--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -1,38 +1,12 @@
-/*.members-team {
-    margin-bottom: 50px;
-}
-
 .members {
     background-color: #f5f4fa;
 }
-
-.member-list {
-    display: flex;
-    
-}
-
-.member-list__description {
-    flex-basis: calc((100% - 90px) / 4);
-    margin-left: 30px;
-
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+.member-list__description{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-
-    &:first-child {
-        margin-left: 0;
-    }
 }
-
-
-
-.members-wrapper {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 32px;
-    padding-right: 32px;
-}
-
 .members-name {
     padding-bottom: 10px;
     font-weight: 500;
@@ -42,11 +16,89 @@
     letter-spacing: 0.03em;
     color: var(--title-text-color);
 }
-
 .members-profession {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
-}*/
+}
+.member-list__description{
+    background-color: #ffffff;
+}
+.members-team {
+    margin-bottom: 30px;
+}
+//0px-767px
+@media screen and (max-width:768px){
+    .members-wrapper {
+        padding-top: 30px;
+        padding-bottom: 24px;
+        padding-left: 122px;
+        padding-right: 122px;
+    }
+    
+    .member-list__description{
+        margin-bottom: 30px;
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+
+}
+
+//768px+
+@media screen and (min-width:768px){
+    .member-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .member-list__description {
+        flex-basis: calc((100% - 30px) / 2);
+    
+        &:not(:nth-child(2n)) {
+            margin-right: 30px;
+        }
+    
+        &:not(:nth-last-child(-n + 2)) {
+            margin-bottom: 30px;
+        }
+    }
+.members-wrapper {
+    padding-top: 30px;
+    padding-bottom: 24px;
+    padding-left: 74px;
+    padding-right: 74px;
+}
+}
+
+//1200+
+@media screen and (min-width: 1200px) {
+    .members-team {
+        margin-bottom: 50px;
+    }
+
+    .member-list {
+        flex-wrap: nowrap;
+    }
+
+    .member-list__description{
+    flex-basis: calc((100%-120px) / 4);
+    margin-right: 30px;
+    &:last-child{
+        margin-right: 0px;
+    }
+}
+
+    .members-wrapper {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+.member-list__description{
+    margin-bottom: 30px;
+}
+}
