--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 580px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   padding: 40px;
 }
@@ -152,12 +152,69 @@ img {
   margin-bottom: 12px;
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 580px;
+  }
+  .modal-title {
+    line-height: 1.15;
+  }
+}
+
+/*.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    height: 580px;
+    background-color: #ffffff;
+    padding: 40px;
+    
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+    }
+}
+
+
+
+.modal-title {
+    display: block;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: #212121;
+}*/
 .social-list {
   display: flex;
   justify-content: space-between;
@@ -311,8 +368,8 @@ img {
 
 .contact-modal-text-accept {
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
 }
@@ -391,6 +448,164 @@ img {
   background-color: #188CE8;
 }
 
+@media screen and (min-width: 1200px) {
+  .contact-modal-text-accept {
+    line-height: 1.71;
+    font-size: 14px;
+  }
+}
+
+/*.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+}
+
+
+.contact-form-input-wrapper {
+    margin-top: 4px;
+    position: relative;
+    display: block;
+
+}
+
+.contact-form-field {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.contact-form-input {
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+
+    }
+}
+
+.contact-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .contact-form-input:focus+& {
+        fill: var(--accent-color);
+    }
+}
+
+.contact-modal-text {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    color: #757575;
+}
+
+.contact-modal-text-accept {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: #757575;
+}
+
+.contact-form-message {
+    width: 100%;
+    height: 120px;
+    margin-top: 4px;
+    padding: 12px 16px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
+
+}
+.contact-form-checkbox-label {
+    display: flex;
+    align-items: center;
+
+    &::before {
+        display: inline-block;
+        width: 16px;
+        height: 15px;
+
+        background-image: url(../images/iconcheck1.svg);
+        cursor: pointer;
+        content: '';
+        margin-right: 8px;
+        transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        .contact-form-checkbox:focus+& {
+            outline: 1px solid rgba(0, 0, 255, 0.5);
+        }
+
+        .contact-form-checkbox:checked+& {
+            background-image: url(../images/rec.svg);
+            background-size: cover;
+            background-position: center;
+        }
+    }
+}
+
+.contact-form-checkbox-wrapper {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form-condition {
+    color: var(--accent-color);
+
+}
+
+.contact-form-submit-btn {
+    display: block;
+    margin: auto;
+    min-width: 200px;
+    height: 50px;
+    background-color: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+
+    &:hover,
+    &:focus {
+        background-color: #188CE8;
+    }
+}*/
 .header_container {
   display: flex;
   justify-content: space-between;
@@ -1196,14 +1411,6 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.adress-list-item {
-  margin-bottom: 9px;
-}
-
-.adress-list-item:last-child {
-  margin-bottom: 0px;
-}
-
 .map {
   color: #ffffff;
 }
@@ -1216,16 +1423,9 @@ img {
   margin-top: 20px;
 }
 
-.invent {
-  width: 206px;
-  height: 80px;
-  margin-left: 70px;
-}
-
 .invent-footer {
   margin-bottom: 20px;
-  font-family: Roboto;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -1233,26 +1433,142 @@ img {
   color: #ffffff;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
 .link-footer {
   background: rgba(255, 255, 255, 0.1);
   fill: var(--main-background-color);
 }
 
-.subscription {
-  width: 570px;
-  height: 86px;
-  margin-left: 93px;
+.adress {
+  text-align: center;
 }
 
-.subscription-form {
-  display: flex;
+.adress-list {
+  margin-bottom: 60px;
 }
 
+.adress-list-item {
+  margin-bottom: 8px;
+}
+
+.adress-list-item:last-child {
+  margin-bottom: 0px;
+}
+
+@media screen and (max-width: 768px) {
+  .adress {
+    text-align: center;
+  }
+  .adress-list {
+    margin-bottom: 60px;
+  }
+  .adress-list-item {
+    margin-bottom: 8px;
+  }
+  .adress-list-item:last-child {
+    margin-bottom: 0px;
+  }
+  .invent {
+    text-align: center;
+    padding-left: 122px;
+    padding-right: 122px;
+  }
+  .link-footer {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .adress-footer {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  .adress-list-item {
+    margin-bottom: 9px;
+  }
+  .adress-list-item:last-child {
+    margin-bottom: 0px;
+  }
+  .invent {
+    width: 206px;
+    height: 80px;
+    margin-left: 70px;
+  }
+  .adress-list {
+    margin-bottom: 0px;
+  }
+}
+
+/*.adress {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.adress-item {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.adress-list-item {
+    margin-bottom: 9px;
+
+    &:last-child {
+        margin-bottom: 0px;
+    }
+}
+
+
+
+.map {
+    color: #ffffff;
+}
+
+.logo-footer {
+    color: #ffffff;
+}
+
+.adress-list {
+    margin-top: 20px;
+}
+
+.invent {
+    width: 206px;
+    height: 80px;
+
+    margin-left: 70px;
+}
+
+.invent-footer {
+    margin-bottom: 20px;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.link-footer {
+    background: rgba(255, 255, 255, 0.1);
+    fill: var(--main-background-color);
+}*/
 .subscription-form-input {
   margin-right: 12px;
   padding-left: 16px;
@@ -1261,7 +1577,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1295,6 +1611,88 @@ img {
   margin-left: 10px;
 }
 
+.subscription-form-input {
+  margin-bottom: 20px;
+}
+
+.subscription-form-btn-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription-form-input {
+    width: 358px;
+    height: 50px;
+  }
+  .subscription-form {
+    display: flex;
+  }
+  .subscription {
+    margin-left: 93px;
+  }
+}
+
+/*.subscription {
+    width: 570px;
+    height: 86px;
+    margin-left: 93px;
+}
+
+.subscription-form {
+    display: flex;
+
+}
+
+.subscription-form-input {
+    margin-right: 12px;
+    padding-left: 16px;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color: #2F303A;
+
+    &::placeholder {
+        color: rgba(255, 255, 255, 0.6);
+    
+    }
+}
+
+
+
+.subscription-form-btn {
+    display: flex;
+    justify-content: center;
+    min-width: 200px;
+    height: 50px;
+    border: none;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.18;
+
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    ;
+
+    color: #FFFFFF;
+}
+
+.subscription-send-icon {
+    margin-left: 10px;
+
+}*/
 .page-header__portfolio {
   border-bottom: 1px solid #ececec;
 }
