--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -66,6 +66,172 @@
 
 .contact-modal-text-accept {
     font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+
+    color: #757575;
+}
+
+.contact-form-message {
+    width: 100%;
+    height: 120px;
+    margin-top: 4px;
+    padding: 12px 16px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
+
+}
+
+.contact-form-checkbox-label {
+    display: flex;
+    align-items: center;
+
+    &::before {
+        display: inline-block;
+        width: 16px;
+        height: 15px;
+
+        background-image: url(../images/iconcheck1.svg);
+        cursor: pointer;
+        content: '';
+        margin-right: 8px;
+        transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        .contact-form-checkbox:focus+& {
+            outline: 1px solid rgba(0, 0, 255, 0.5);
+        }
+
+        .contact-form-checkbox:checked+& {
+            background-image: url(../images/rec.svg);
+            background-size: cover;
+            background-position: center;
+        }
+    }
+}
+
+.contact-form-checkbox-wrapper {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form-condition {
+    color: var(--accent-color);
+
+}
+
+.contact-form-submit-btn {
+    display: block;
+    margin: auto;
+    min-width: 200px;
+    height: 50px;
+    background-color: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+
+    &:hover,
+    &:focus {
+        background-color: #188CE8;
+    }
+}//0px-767px
+@media screen and (max-width:768px) {}
+
+//768+
+@media screen and (min-width: 768px) {}
+
+//1200+
+@media screen and (min-width: 1200px) {
+    .contact-modal-text-accept {
+        line-height: 1.71;
+        font-size: 14px;
+
+    }
+
+}
+/*.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+}
+
+
+.contact-form-input-wrapper {
+    margin-top: 4px;
+    position: relative;
+    display: block;
+
+}
+
+.contact-form-field {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.contact-form-input {
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+
+    }
+}
+
+.contact-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .contact-form-input:focus+& {
+        fill: var(--accent-color);
+    }
+}
+
+.contact-modal-text {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    color: #757575;
+}
+
+.contact-modal-text-accept {
+    font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -148,5 +314,5 @@
     &:focus {
         background-color: #188CE8;
     }
-}
+}*/
 
