--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -3,6 +3,75 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 450px;
+    height: 609px;
+    background-color: #ffffff;
+    padding: 40px;
+
+}
+.modal-close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+    }
+}
+
+
+
+.modal-title {
+    display: block;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: #212121;
+}
+//0px-767px
+@media screen and (max-width:768px){
+
+}
+//768+
+@media screen and (min-width: 768px){
+
+}
+//1200+
+@media screen and (min-width: 1200px){
+.modal {
+    width: 528px;
+    height: 580px;
+}
+.modal-title{
+    line-height: 1.15;
+}
+
+}
+
+
+
+
+/*.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 528px;
     height: 580px;
     background-color: #ffffff;
@@ -44,4 +113,4 @@
     letter-spacing: 0.03em;
 
     color: #212121;
-}
+}*/
