--- a/sass/layout/_portfolio-galery.scss
+++ b/sass/layout/_portfolio-galery.scss
@@ -42,106 +42,6 @@
             1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
-//0px-767px
-@media screen and (max-width:768px) {
-    .galery-list{
-        flex-wrap: wrap;
-      justify-content: flex-start;
-      margin-bottom: 40px;
-      
-    }
-    .galery-list-item{
-        margin-right: 8px;
-        &:not(:nth-last-child(-n + 3)) {
-            margin-bottom: 15px;
-        }
-        
-    }
-
-}
-
-
-//768+
-@media screen and (min-width: 768px) {
-    .galery-list {
-        flex-wrap:nowrap;
-        justify-content: center;
-        margin-bottom: 30px;
-    }
-    .galery-list-item:not(:last-child) {
-        margin-right: 8px;
-    }
-}
-
-//1200+
-@media screen and (min-width: 1200px){}
-
-
-/*.galery-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-}
-
-.galery-list-item:not(:last-child) {
-    margin-right: 8px;
-}
-
-.galery-list-button {
-    min-width: 73px;
-    padding: 6px 22px;
-    border-radius: 4px;
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    background-color: #f5f4fa;
-    color: var(--title-text-color);
-    border: 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:focus {
-            background-color: var(--accent-color);
-            color: #ffffff;
-            cursor: pointer;
-            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
-        }
-}
-
-.galery-link {
-    display: block;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-            1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-}
-
-.galery-images {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.galery-item {
-    flex-basis: calc((100% - 60px) / 3);
-
-  &:not(:nth-child(3n)) {
-        margin-right: 30px;
-    }
-
-&:not(:nth-last-child(-n + 3)) {
-        margin-bottom: 30px;
-    }
-}
-
 
 .galery-images-name {
     margin-bottom: 4px;
@@ -195,5 +95,94 @@
     .galery-link:focus & {
         transform: translateY(0%);
     }
-}*/
+}
+
+
+//0px-767px
+@media screen and (max-width:768px) {
+    .galery-list{
+        flex-wrap: wrap;
+      justify-content: flex-start;
+      margin-bottom: 40px;
+      
+    }
+    .galery-list-item{
+        margin-right: 8px;
+        &:not(:nth-last-child(-n + 3)) {
+            margin-bottom: 15px;
+        }
+        
+    }
+
+}
+.galery-item {
+    margin-bottom: 30px;
+
+    &:last-child {
+        margin-bottom: 0px;
+    }
+}
+//768+
+@media screen and (min-width: 768px) {
+    .galery-list {
+        flex-wrap:nowrap;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+    .galery-list-item:not(:last-child) {
+        margin-right: 8px;
+    }
+
+    .galery-images {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .galery-item {
+        flex-basis: calc((100% - 30px) / 2);
+       
+    
+        &:not(:nth-child(2n)) {
+            margin-right: 30px;
+        }
+    
+        &:not(:nth-last-child(-n + 2)) {
+            margin-bottom: 30px;
+        }
+    }
+
+    .galery-wrapper_first{
+        padding-bottom: 56px;
+    }
+}
+
+
+
+//1200+
+@media screen and (min-width: 1200px){
+    .galery-list {
+        margin-bottom: 50px;
+    }
+.galery-item {
+    flex-basis: calc((100% - 60px) / 3);
+    
+&:not(:nth-child(2n)) {
+    margin-right: 0px;
+}
+
+    &:not(:nth-child(3n)) {
+        margin-right: 30px;
+    }
+
+    &:not(:nth-last-child(-n + 3)) {
+        margin-bottom: 30px;
+    }
+}
+.galery-wrapper_first {
+    padding-bottom: 20px;
+}
+
+}
+
+
 
