--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .main-title {
     font-size: 26px;
     line-height: 1.62;
@@ -230,11 +230,23 @@ img {
 .description__title,
 .members-team {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .description__title,
+  .members-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
 }
 
 .backdrop {
@@ -393,15 +405,15 @@ img {
   align-items: center;
 }
 
-.page-header {
-  position: relative;
-}
-
+/*.page-header{
+    position: relative;
+   
+}*/
 .logo-accent {
   color: var(--accent-color);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .navigation {
     display: none;
   }
@@ -413,7 +425,7 @@ img {
     padding-bottom: 10px;
   }
   .mobile-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -715,14 +727,14 @@ img {
   background-color: #188ce8;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/imagesMobile/Header.jpg");
     max-width: 480px;
   }
 }
 
-@media screen and (max-width: 768px) and (min-device-pixel-ratio: 2), screen and (max-width: 768px) and (min-resolution: 192dpi), screen and (max-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/imagesMobile/Header@2x.jpg");
   }
@@ -746,6 +758,8 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
     max-width: 1600px;
     background-size: cover;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
@@ -786,7 +800,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .main-text__images {
     width: 450px;
   }
@@ -795,6 +809,9 @@ img {
   }
   .main-text__items:last-child {
     margin-bottom: 0px;
+  }
+  .main-text__themes {
+    text-align: center;
   }
 }
 
@@ -812,8 +829,11 @@ img {
   .main-text__items:not(:nth-child(2n)) {
     margin-right: 30px;
   }
-  .main-text__items:not(:nth-last-child(-n + 2)) {
-    margin-bottom: 30px;
+  .main-text__items:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+  .main-text__themes {
+    text-align: start;
   }
 }
 
@@ -829,14 +849,16 @@ img {
   .main-text__items {
     flex-basis: calc((100%-120px) / 4);
     margin-right: 30px;
-    margin-bottom: 30px;
   }
   .main-text__items:last-child {
     margin-right: 0px;
   }
+  .main-text__items:not(:nth-last-child(-n + 1)) {
+    margin-bottom: 0px;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .description {
     display: none;
   }
@@ -919,7 +941,7 @@ img {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .members-wrapper {
     padding-top: 30px;
     padding-bottom: 24px;
@@ -941,12 +963,13 @@ img {
   }
   .member-list__description {
     flex-basis: calc((100% - 30px) / 2);
+    margin-bottom: 30px;
   }
   .member-list__description:not(:nth-child(2n)) {
     margin-right: 30px;
   }
-  .member-list__description:not(:nth-last-child(-n + 2)) {
-    margin-bottom: 30px;
+  .member-list__description:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
   }
   .members-wrapper {
     padding-top: 30px;
@@ -976,8 +999,8 @@ img {
     padding-left: 32px;
     padding-right: 32px;
   }
-  .member-list__description {
-    margin-bottom: 30px;
+  .member-list__description:not(:nth-last-child(-n + 1)) {
+    margin-bottom: 0px;
   }
 }
 
@@ -1013,7 +1036,7 @@ img {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .clients-link {
     width: 210px;
     height: 92px;
@@ -1058,6 +1081,9 @@ img {
   }
   .clients-item:not(:nth-last-child(-n + 3)) {
     margin-bottom: 0px;
+  }
+  .description__title {
+    margin-bottom: 50px;
   }
 }
 
@@ -1117,7 +1143,7 @@ img {
   margin-bottom: 0px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .adress {
     text-align: center;
   }
@@ -1146,6 +1172,10 @@ img {
     align-items: baseline;
     justify-content: space-around;
   }
+  .invent {
+    width: 206px;
+    height: 80px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1160,9 +1190,10 @@ img {
   .adress-list-item:last-child {
     margin-bottom: 0px;
   }
+  .adress {
+    text-align: start;
+  }
   .invent {
-    width: 206px;
-    height: 80px;
     margin-left: 70px;
   }
   .adress-list {
@@ -1326,7 +1357,7 @@ img {
   transform: translateY(0%);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .galery-list {
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -1367,8 +1398,8 @@ img {
   .galery-item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
-  .galery-item:not(:nth-last-child(-n + 2)) {
-    margin-bottom: 30px;
+  .galery-item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
   }
   .galery-wrapper_first {
     padding-bottom: 56px;
@@ -1388,8 +1419,8 @@ img {
   .galery-item:not(:nth-child(3n)) {
     margin-right: 30px;
   }
-  .galery-item:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
+  .galery-item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
   }
   .galery-wrapper_first {
     padding-bottom: 20px;
