--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -1,9 +1,21 @@
 .description__title,
 .members-team {
     font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+//1200+
+@media screen and (min-width:1200px){
+.description__title,
+.members-team {
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+}
 }
