--- a/sass/components/_main-title.scss
+++ b/sass/components/_main-title.scss
@@ -14,7 +14,7 @@
 
 }
 //768+
-@media screen and (min-width:768px) {
+@media screen and (min-width:767px) {
     .main-title {
         font-size: 26px;
         line-height: 1.62;}
@@ -23,5 +23,7 @@
 @media screen and (min-width:1200px) {
     .main-title {
         font-size: 44px;
-        line-height: 1.36;}
+        line-height: 1.36;
+    
+}
     }
