--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,10 +5,10 @@
     align-items: center;
 }
 
-.page-header{
+/*.page-header{
     position: relative;
    
-}
+}*/
 .logo-accent {
     color: var(--accent-color);
 }
@@ -17,7 +17,7 @@
 
 
 //0px-767px
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .navigation {
         display: none;
     }
@@ -31,7 +31,7 @@
 }
 
     .mobile-menu {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
