--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -37,7 +37,7 @@
     }
 }
 //480+
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .hero{
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../images/imagesMobile/Header.jpg');
@@ -78,6 +78,8 @@
             url('../images/hero.jpg');
         max-width:1600px;
         background-size: cover;
+            padding-top: 200px;
+            padding-bottom: 200px;
     }
 
     @media (min-device-pixel-ratio: 2),
