--- a/sass/layout/_main-text.scss
+++ b/sass/layout/_main-text.scss
@@ -28,7 +28,7 @@
     }
 
 //0px-767px
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .main-text__images{
         width: 450px;
     }
@@ -39,7 +39,9 @@
        }
         
     }
-    
+    .main-text__themes{
+        text-align: center;
+    }
 }
 //768+
 @media screen and (min-width: 768px){
@@ -58,11 +60,13 @@
                 margin-right: 30px;
             }
         
-            &:not(:nth-last-child(-n + 2)) {
-                margin-bottom: 30px;
+            &:nth-last-child(-n + 2) {
+                margin-bottom: 0px;
             }
         }
-
+.main-text__themes {
+    text-align: start;
+}
 }
 //1200+
 @media screen and (min-width:1200px){
@@ -81,12 +85,13 @@
 .main-text__items {
     flex-basis: calc((100%-120px) / 4);
     margin-right: 30px;
-    margin-bottom: 30px;
+    
     &:last-child {
-        margin-right: 0px;
-        
+        margin-right: 0px; 
     }
-   
+&:not(:nth-last-child(-n + 1)) {
+    margin-bottom: 0px;
+}
 }
 
 }
