--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -30,7 +30,7 @@
     margin-bottom: 30px;
 }
 //0px-767px
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .members-wrapper {
         padding-top: 30px;
         padding-bottom: 24px;
@@ -56,13 +56,13 @@
     
     .member-list__description {
         flex-basis: calc((100% - 30px) / 2);
-    
+    margin-bottom: 30px;
         &:not(:nth-child(2n)) {
             margin-right: 30px;
         }
     
-        &:not(:nth-last-child(-n + 2)) {
-            margin-bottom: 30px;
+        &:nth-last-child(-n + 2) {
+            margin-bottom: 0px;
         }
     }
 .members-wrapper {
@@ -99,6 +99,8 @@
     }
 
 .member-list__description{
-    margin-bottom: 30px;
+    &:not(:nth-last-child(-n + 1)) {
+        margin-bottom: 0px;
+    }
 }
 }
