--- a/sass/layout/_portfolio-galery.scss
+++ b/sass/layout/_portfolio-galery.scss
@@ -99,7 +99,7 @@
 
 
 //0px-767px
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .galery-list{
         flex-wrap: wrap;
       justify-content: flex-start;
@@ -146,8 +146,9 @@
             margin-right: 30px;
         }
     
-        &:not(:nth-last-child(-n + 2)) {
-            margin-bottom: 30px;
+        &:nth-last-child(-n + 2) {
+            margin-bottom: 0px;
+        
         }
     }
 
@@ -174,8 +175,8 @@
         margin-right: 30px;
     }
 
-    &:not(:nth-last-child(-n + 3)) {
-        margin-bottom: 30px;
+    &:nth-last-child(-n + 3) {
+        margin-bottom: 0px;
     }
 }
 .galery-wrapper_first {
